[package]
name = "pist-off"
version = "1.0.4"
publish = false
authors = ["Ian Chamberlain <ian-h-chamberlain@users.noreply.github.com>"]
edition = "2021"
exclude = [
    "dist",
    "build",
    "assets",
    "credits",
]
license = "MIT"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/dynamic_linking"]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/jpeg",
    "bevy/hdr",
    "bevy/zstd",
    "bevy/x11",
    "bevy/ktx2",
    "bevy/file_watcher",
    "bevy/tonemapping_luts",
]

[dependencies]
bevy = { version = "0.12", default-features = false }
bevy_asset_loader = { version = "0.19" }
rand = { version = "0.8.3" }
bevy_mod_picking = "0.17.0"
bevy_mod_outline = "0.6.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
indextree = "4.6.0"
graphalgs = "0.1.1"

# inline_tweak uses std::time and probably wouldn't work on wasm anyway. Just
# define the tweak macro as a transparent passthrough on wasm
[target.'cfg(not(target_family = "wasm"))'.dependencies]
inline_tweak = "1.0.8"

[build-dependencies]
embed-resource = "1.4"
