[package]
name = "pist-off"
version = "1.0.4"
publish = false
authors = ["Ian Chamberlain <ian-h-chamberlain@users.noreply.github.com>"]
edition = "2021"
exclude = [
    "dist",
    "build",
    "assets",
    "credits",
]
license = "MIT"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/dynamic_linking"]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi-threaded",
    "bevy/png",
    "bevy/jpeg",
    "bevy/hdr",
    "bevy/zstd",
    "bevy/x11",
    "bevy/ktx2",
    "bevy/tonemapping_luts",
    "bevy/webgl2",
]

[dependencies]
bevy = { version = "0.12.0", git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921", default-features = false }
bevy_asset_loader = { version = "0.19" }
rand = { version = "0.8.3" }
bevy_mod_outline = "0.6.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
indextree = "4.6.0"
graphalgs = "0.1.1"

[dependencies.bevy_mod_picking]
version = "0.17.0"
default-features = false
features = [
    "backend_raycast",
    "backend_bevy_ui",
    "highlight",
    "selection",
]

[patch.crates-io]
# Potential fix for https://github.com/bevyengine/bevy/issues/10832.
# It's not merged upstream yet, but we have simple animations so hopefully doesn't matter if the fix is incomplete.
bevy_animation = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }

# Ugh... https://bevy-cheatbook.github.io/setup/bevy-git.html?highlight=main#cargo-patches
bevy = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_a11y = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_app = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_asset = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_asset_macros = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_core = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_core_pipeline = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_derive = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_ecs = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_ecs_macros = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_encase_derive = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_gizmos = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_hierarchy = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_input = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_log = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_macro_utils = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_math = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_mikktspace = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_pbr = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_ptr = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_reflect = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_reflect_derive = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_render = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_render_macros = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_sprite = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_tasks = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_time = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_transform = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_ui = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_utils = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_utils_proc_macros = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }
bevy_window = { git = "https://github.com/ian-h-chamberlain/bevy.git", rev = "7b1ba110fc34bcb1274d88d51f83a7e997f13921" }

# inline_tweak uses std::time and probably wouldn't work on wasm anyway. Just
# define the tweak macro as a transparent passthrough on wasm
[target.'cfg(not(target_family = "wasm"))'.dependencies]
inline_tweak = "1.0.8"

[build-dependencies]
embed-resource = "1.4"
